# trebl_tools

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  trebl_tools_env.yaml
.ipynb_checkpoints/: CHANGELOG-checkpoint.md  README-checkpoint.md
docs/: conf.py  index.rst  requirements.txt  trebl_tools.rst
docs/.ipynb_checkpoints/: index-checkpoint.rst
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  trebl_tools.html
docs/_build/html/.doctrees/: index.doctree  modules.doctree  trebl_tools.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: modules.rst.txt
docs/_build/html/user_guide/: advanced_usage.html  analysis_setup.html  installation.html  introduction.html  preprocessing.html  step1.html  step2.html  (+1 more)
docs/user_guide/: advanced_usage.md  installation.md  preprocessing.md  step1.md  step2.md  trebl_experiment.md
docs/user_guide/.ipynb_checkpoints/: installation-checkpoint.md
examples/: README.md
examples/data/: README.md  design_file.txt
examples/notebooks/: README.md  full_analysis_example.ipynb  quick_start_example.ipynb
examples/savio_jobs/: README.md  full_analysis_job.sh  quick_start_job.sh
src/trebl-tools/: error_correct.py  finder.py  initial_map.py  plotting.py  preprocess.py  umi_deduplicate.py
src/trebl_tools/: __init__.py  complexity.py  error_correct.py  finder.py  initial_map.py  map_refiner.py  pipelines.py  plotting.py  umi_deduplicate.py
src/trebl_tools/savio_jobs/: fastp.sh
(+20 files in other folders)
