[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trebl_tools" 
version = "0.1.0"
description = "Tools for TREBL analysis"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Sanjana Kotha", email = "sanjana.kotha@berkeley.edu"}
]
dependencies = [
    "duckdb>=1.4.4",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=2.4.2",
    "dask[dataframe]>=2025.12.0",
    "distributed>=2025.12.0",
    "seaborn>=0.12.2,<0.13.0",
    "matplotlib>=3.10.0",
    "biopython>=1.86",
    "tqdm>=4.67.0",
    "pyarrow>=22.0.0",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "flake8",
    "ipython>=9.9.0",
    "ipykernel>=7.1.0",
    "jupyter",
]

bio = [
    "fastqsplitter>=1.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
trebl_tools = ["savio_jobs/*.sh"]
